@@ -1,5 +1,7 @@
 *SVN*
 
+* Added :use_short_month option to select_month helper to show month names as abbreviations
+
 * Make link_to escape the javascript in the confirm option #1964 [nicolas.pouillard@gmail.com]
 
 * Make assert_redirected_to properly check URL's passed as strings #1910 [Scott Barron]
